Background, spacing, fixed anchor positioning

--- a/port.css
+++ b/port.css
@@ -1,6 +1,9 @@
 body{
     font-family: 'Montserrat', sans-serif;
     scroll-behavior: smooth;
+    background-image: url("./images/smu.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 nav{
     width: 101%;
@@ -19,9 +22,13 @@ nav{
     flex-wrap: wrap;
     position: fixed;
     background-color: white;
+    background-image: url("./images/smu.webp"); 
+    background-position: 2000%;
 }
+
 .container{
     padding: 10px 5%;
+    
 }
 nav h3{
     display: block;
@@ -60,7 +67,7 @@ nav ul li a:hover::after{
 }
 
 .header-text{
-    margin-top: 15%;
+    margin-top: 20%;
     font-size: 30px;
     color:black;
     align-items: center;
@@ -74,6 +81,9 @@ nav ul li a:hover::after{
     color: #1c4b82;
 }
 
+#optionBar{
+    padding-bottom: 300px;
+}
 .imgFr{
     background-image: url("images/MyP.jpg");
     background-position: 50%;    
@@ -101,8 +111,7 @@ nav ul li a:hover::after{
 /** about part **/
 
 #about{
-    padding-top: 500px;
-    padding-bottom: 200px;
+    padding-top: 90px;
     color: #ababab
 }
 
@@ -130,8 +139,8 @@ nav ul li a:hover::after{
 .about-2 p, li{
     color: black;
 }
-.sub-text{
-    margin-top: 50px;
+.about-2 .sub-text{
+    margin-top: -10px;
     font-size: 60px;
     font-weight: 600;
     color: black;
@@ -182,7 +191,7 @@ nav ul li a:hover::after{
 
 /** Portfoilio **/
 #portfolio {
-    padding-bottom: 200px;
+    padding-bottom: 250px;
 }
 
 .projectList{
@@ -218,7 +227,7 @@ nav ul li a:hover::after{
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     transition: height 0.5s;
     opacity: 0;
 }
@@ -427,7 +436,7 @@ nav .fas{
         position: relative;
     }
     .header-text{
-        margin-top: 70px;
+        margin-top: 100px;
         font-size: 20px;
         text-align: center; 
         display: inline-flex;
